--- a/404.md
+++ b/404.md
@@ -7,4 +7,8 @@ Nous n’avons pas pu trouver la page demandée.
 
 [Retour à la page d'accueil]({{ site.baseurl }}/)
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+<!-- Section - Last posts -->
+{% include template_last-posts.html %}
+
+<!-- Section - Most used tags -->
+{% include template_most-used-tags.html %}
