Remove Error 404 mention

--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Erreur 404 - Page inexistante
+title: Page inexistante
 ---
 
 Nous n’avons pas pu trouver la page demandée. 
