Add 404 page illustration

--- a/404.md
+++ b/404.md
@@ -3,9 +3,11 @@ layout: page
 title: Page inexistante
 ---
 
+![Lunettes de soleil posées à l’envers](/images/pages/AE_Illustration_404__1280.png)
+
 Nous n’avons pas pu trouver la page demandée. 
 
-[Retour à la page d'accueil]({{ site.baseurl }}/)
+[Retour à la page d’accueil]({{ site.baseurl }}/)
 
 <!-- Section - Last posts -->
 {% include template_last-posts.html %}
